Bug 214538 - Ark crash after viewing a html file in a .rar archive
Summary: Ark crash after viewing a html file in a .rar archive
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Harald Hvaal
URL:
Keywords:
: 215739 217535 218203 218342 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-11-14 16:27 UTC by Ryan Ren
Modified: 2009-12-12 01:22 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The rar file that crashed Ark (223.16 KB, application/rar)
2009-11-14 17:34 UTC, Ryan Ren
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ryan Ren 2009-11-14 16:27:38 UTC
Application that crashed: ark
Version of the application: 2.13
KDE Version: 4.3.2 (KDE 4.3.2)
Qt Version: 4.5.2
Operating System: Linux 2.6.31-14-generic x86_64
Distribution: Ubuntu 9.10

What I was doing when the application crashed:
1 click an rar file, then Ark is launched
2 click a html file in the rar archive in Ark
3 close the view of the html file
4 Ark crashed

 -- Backtrace:
Application: Ark (ark), signal: Segmentation fault
The current source language is "auto; currently c".
[KCrash Handler]
#5  QObject::parent (this=0x0) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:243
#6  QWidget::parentWidget (this=0x0) at ../../include/QtGui/../../src/gui/kernel/qwidget.h:988
#7  QWidget::window (this=0x0) at kernel/qwidget.cpp:3882
#8  0x00007f1b46e4ceb6 in QWidget::topLevelWidget (this=0x26e9db0) at /usr/include/qt4/QtGui/qwidget.h:314
#9  KParts::StatusBarExtension::statusBar (this=0x26e9db0) at ../../kparts/statusbarextension.cpp:153
#10 0x00007f1b46e4d82c in KParts::StatusBarExtension::removeStatusBarItem (this=0x0, widget=0x2b6c3e0) at ../../kparts/statusbarextension.cpp:176
#11 0x00007f1b36a4b71e in KHTMLPart::removeJSErrorExtension (this=0x26290d0) at ../../khtml/khtml_part.cpp:1274
#12 0x00007f1b36a75818 in ~KHTMLPart (this=0x26290d0, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>) at ../../khtml/khtml_part.cpp:585
#13 0x00007f1b46e34526 in KParts::Part::slotWidgetDestroyed (this=0x26290d0) at ../../kparts/part.cpp:354
#14 0x00007f1b46e3461c in KParts::Part::qt_metacall (this=0x26290d0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3b664630) at ./part.moc:76
#15 0x00007f1b46e34675 in KParts::ReadOnlyPart::qt_metacall (this=0x0, _c=45532128, _id=-48, _a=0x1) at ./part.moc:154
#16 0x00007f1b36a7e43e in KHTMLPart::qt_metacall (this=0x0, _c=45532128, _id=-48, _a=0x1) at ./khtml_part.moc:246
#17 0x00007f1b45007ddc in QMetaObject::activate (sender=0x26b2660, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x1) at kernel/qobject.cpp:3113
#18 0x00007f1b45008314 in QObject::destroyed (this=0x0, _t1=0x26b2660) at .moc/release-shared/moc_qobject.cpp:143
#19 0x00007f1b4500917b in ~QObject (this=<value optimized out>, __in_chrg=<value optimized out>) at kernel/qobject.cpp:757
#20 0x00007f1b4595d628 in ~QWidget (this=0x26b2660, __in_chrg=<value optimized out>) at kernel/qwidget.cpp:1380
#21 0x00007f1b45000e5c in QObjectPrivate::deleteChildren (this=0x2619ea0) at kernel/qobject.cpp:1847
#22 0x00007f1b4595d993 in ~QWidget (this=0x2601140, __in_chrg=<value optimized out>) at kernel/qwidget.cpp:1367
#23 0x00007f1b4664f821 in ~KVBox (this=0x0, __in_chrg=<value optimized out>) at ../../kdeui/widgets/kvbox.cpp:29
#24 0x00007f1b45000e5c in QObjectPrivate::deleteChildren (this=0x261d360) at kernel/qobject.cpp:1847
#25 0x00007f1b4595d993 in ~QWidget (this=0x7fff3b664900, __in_chrg=<value optimized out>) at kernel/qwidget.cpp:1367
#26 0x00007f1b3c7d662d in ArkViewer::view (filename=..., parent=0x22d5bb0) at ../../../ark/part/arkviewer.cpp:91
#27 0x00007f1b3c7cfb7c in Part::slotPreviewExtracted (this=0x22e3fa0, job=<value optimized out>) at ../../../ark/part/part.cpp:471
#28 0x00007f1b3c7c8ff1 in Part::qt_metacall (this=0x22e3fa0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x221a050) at moc_part.cpp:121
#29 0x00007f1b450020f9 in QObject::event (this=0x22e3fa0, e=0x26096d0) at kernel/qobject.cpp:1111
#30 0x00007f1b45912efc in QApplicationPrivate::notify_helper (this=0x21d4030, receiver=0x22e3fa0, e=0x26096d0) at kernel/qapplication.cpp:4056
#31 0x00007f1b4591a1ce in QApplication::notify (this=0x7fff3b665490, receiver=0x22e3fa0, e=0x26096d0) at kernel/qapplication.cpp:4021
#32 0x00007f1b46549ab6 in KApplication::notify (this=0x7fff3b665490, receiver=0x22e3fa0, event=0x26096d0) at ../../kdeui/kernel/kapplication.cpp:302
#33 0x00007f1b44ff2c2c in QCoreApplication::notifyInternal (this=0x7fff3b665490, receiver=0x22e3fa0, event=0x26096d0) at kernel/qcoreapplication.cpp:610
#34 0x00007f1b44ff380a in QCoreApplication::sendEvent (receiver=0x0, event_type=<value optimized out>, data=0x21b9050) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#35 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=<value optimized out>, data=0x21b9050) at kernel/qcoreapplication.cpp:1247
#36 0x00007f1b4501b533 in QCoreApplication::sendPostedEvents (s=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#37 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:210
#38 0x00007f1b412a5bbe in g_main_dispatch (context=0x21d6d20) at /build/buildd/glib2.0-2.22.2/glib/gmain.c:1960
#39 IA__g_main_context_dispatch (context=0x21d6d20) at /build/buildd/glib2.0-2.22.2/glib/gmain.c:2513
#40 0x00007f1b412a9588 in g_main_context_iterate (context=0x21d6d20, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>)
    at /build/buildd/glib2.0-2.22.2/glib/gmain.c:2591
#41 0x00007f1b412a96b0 in IA__g_main_context_iteration (context=0x21d6d20, may_block=1) at /build/buildd/glib2.0-2.22.2/glib/gmain.c:2654
#42 0x00007f1b4501b1a6 in QEventDispatcherGlib::processEvents (this=0x21b8c80, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#43 0x00007f1b459a74be in QGuiEventDispatcherGlib::processEvents (this=0x0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#44 0x00007f1b44ff1532 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#45 0x00007f1b44ff1904 in QEventLoop::exec (this=0x7fff3b6653e0, flags=) at kernel/qeventloop.cpp:201
#46 0x00007f1b44ff3ab9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#47 0x0000000000409996 in main (argc=<value optimized out>, argv=<value optimized out>) at ../../../ark/app/main.cpp:209

This bug may be a duplicate of or related to bug 211213

Reported using DrKonqi
Comment 1 Raphael Kubo da Costa 2009-11-14 17:13:17 UTC
Can you attach the file that causes this crash or a test case that presents the same behaviour?
Comment 2 Ryan Ren 2009-11-14 17:34:23 UTC
Created attachment 38327 [details]
The rar file that  crashed Ark

the crash described in the bug report is reproduceable with this file.
Hope this helps.

Ryan
Comment 3 Maksim Orlovich 2009-11-14 19:59:23 UTC
SVN commit 1049202 by orlovich:

Don't crash when ::statusBar is called after the widget destruction 
(when widget was destroyed before the part) if we never had the 
statusbar in the first place.

BUG: 214538


 M  +1 -1      statusbarextension.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1049202
Comment 4 Maksim Orlovich 2009-11-14 20:00:42 UTC
SVN commit 1049203 by orlovich:

automatically merged revision 1049202:
Don't crash when ::statusBar is called after the widget destruction 
(when widget was destroyed before the part) if we never had the 
statusbar in the first place.

BUG: 214538

 M  +1 -1      statusbarextension.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1049203
Comment 5 Raphael Kubo da Costa 2009-11-22 21:39:14 UTC
*** Bug 215739 has been marked as a duplicate of this bug. ***
Comment 6 Dario Andres 2009-11-25 19:49:08 UTC
*** Bug 216137 has been marked as a duplicate of this bug. ***
Comment 7 Raphael Kubo da Costa 2009-12-06 17:43:49 UTC
*** Bug 217535 has been marked as a duplicate of this bug. ***
Comment 8 Raphael Kubo da Costa 2009-12-11 01:00:50 UTC
*** Bug 218203 has been marked as a duplicate of this bug. ***
Comment 9 Raphael Kubo da Costa 2009-12-12 01:22:12 UTC
*** Bug 218342 has been marked as a duplicate of this bug. ***