Don't crash when ::statusBar is called after the widget destruction (when widget was destroyed before the part) if we never had the statusbar in the first place.

BUG: 214538

svn path=/branches/KDE/4.3/kdelibs/; revision=1049202